# Scrapeagent

./: .env.docker  .env.example  .gitignore  COMPLETE_STACK_INTEGRATION_REPORT.md  Dockerfile  END_TO_END_TESTING_REPORT.md  JINA_AI_SETUP_GUIDE.md  Makefile  PERFORMANCE_OPTIMIZATION_REPORT.md  PORT_MANAGEMENT.md  README.md  README_FULLSTACK.md  SERENA_MCP_INSTALLATION_GUIDE.md  audit_core_integrations.py  audit_results.json  complete_stack_integration_results.json  crawl4ai_integration_test_results.json  create_logos.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  end_to_end_test_results.json  jina_ai_config_test_results.json  jina_ai_configuration_results.json  main.py  performance_optimization_test_results.json  production-deployment-guide.md  pyproject.toml  requirements-docker.txt  requirements-minimal.txt  requirements.txt  serena_mcp.bat  setup_jina_ai_config.py  start_serena_mcp.ps1  test_adaptive_extraction_crawl4ai.py  test_complete_integration.py  test_complete_stack_integration.py  test_core_scraper_integration.py  test_crawl4ai_client.py  test_crawl4ai_integration.py  (+4 more)
.augment/rules/: Status Log.md
Docs/: ARCHITECTURE.md  AUTHENTICATION_SYSTEM.md  CHANGELOG.md  COMPREHENSIVE_PROJECT_PLAN.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_RULES.md  DOCKER_SETUP.md  Features.md  NATURAL_LANGUAGE_INTERFACE_COMPLETION.md  PORT_CONFIGURATION.md  PRD.md  PROJECT_COMPLETION_SUMMARY.md  README.md  Smart_Scraper_AI.md  crawl4ai_custom_context.md  jin.md  project_sheet.md  project_status.md  project_structure.md  tech_stack.md
Help/: 01_PROJECT_OVERVIEW.md  02_MODULE_DOCUMENTATION.md  02_NAVIGATION_THROTTLING_ANALYSIS.md  03_API_REFERENCE.md  04_PORT_CONFIGURATION.md  05_FEATURE_DOCUMENTATION.md  06_SETUP_INSTALLATION.md  07_DEVELOPMENT_GUIDE.md  08_DEPLOYMENT_GUIDE.md  09_TROUBLESHOOTING.md  10_PROJECT_INDEX.md  README.md
api/routes/: admin.py  auth.py  health.py  projects.py  scraping.py
config/: settings.py
core/: scraper.py
database/: connection.py  repositories.py  schema.sql
features/: adaptive_extraction.py  local_llm_integration.py  multimodal_processing.py  natural_language_interface.py  proxy_rotation.py
features/nlp/: __init__.py  complex_logic_processor.py  conversation_manager.py  entity_extraction.py  intent_classification.py  models.py
frontend/: .env.example  Dockerfile  Dockerfile.dev  README.md  nginx.conf  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.css  index.tsx
frontend/src/components/auth/: ProtectedRoute.tsx  SafeNavigate.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/auth/: LoginPage.tsx  RegisterPage.tsx
frontend/src/pages/content/: ContentPage.tsx
frontend/src/pages/dashboard/: DashboardPage.tsx
frontend/src/pages/jobs/: JobsPage.tsx
frontend/src/pages/projects/: ProjectsPage.tsx
frontend/src/pages/settings/: SettingsPage.tsx
frontend/src/services/: apiClient.ts  authService.ts  dashboardService.ts  jobService.ts  projectService.ts
frontend/src/store/: index.ts
frontend/src/store/slices/: authSlice.ts  jobsSlice.ts  projectsSlice.ts  uiSlice.ts
frontend/src/types/: index.ts
frontend/src/utils/: authStateMachine.ts  debugLogger.ts
scripts/: docker-launch.bat  docker-launch.sh  port_check.py  start-frontend.bat  start-frontend.sh  start.py
services/: __init__.py  crawl4ai_client.py  jina_ai_client.py  performance_optimizer.py  session_manager.py
swiss_knife/: day_one_core.py
tests/: conftest.py  test_complex_nlp_features.py  test_main.py  test_multimodal_processing.py  test_natural_language_interface.py  test_nlp_integration.py  test_performance.py  test_proxy_rotation.py  test_realistic_scenarios.py
utils/: exceptions.py  logging.py  port_manager.py
